# rooset

./: .clang_complete  .dockerignore  .eslintrc.js  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENCE  README.md  circle.Dockerfile  circle.yml  configure  core.Dockerfile  docker-compose.yml  docsvc.Dockerfile  frontend.Dockerfile  go.mod  go.sum  lerna.json  lf.Dockerfile  package-lock.json  package.json  rooset-domain.sln  run-all-tests  tailwind.config.js  tsconfig.json
aggregates/: commandhandler.go  issue_aggregate.go  issue_aggregate_test.go  issue_command_handler.go  unit_aggregate.go  unit_aggregate_test.go  unit_command_handler.go  utils_test.go
assert/: assert.go
clientts/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  webpack.client.config.js
cmd/: includetext.go  jwtencode.go  main.go  rooset.go
conf/: conf.go  dockerdev.env  set-dev-env  webpack.config.js
docsvc/: auth.go  desc.go  diff.go  diff_test.go  errors.go  exampledesc.html  exampledoc.html  processhtml.go  processhtml_test.go  rev.go  roosetdesc.xsd  roosetdoc.dtd  roosetdoc.go  roosetdoc.xsd  server.go  storage.go
docvalidationsvc/: README.md  index.ts
editor/: index.ts
etc/: .gitignore  build-token.rb  core-services  frontend-server  frontend-tests  init-dev-db  init-template-db  init-test-db  jwt-decode  jwt-encode  jwtdecode  jwtdecode.go  jwtencode.go  keep-alive  lffrontend-server  lffrontend-shell  lffrontend-tests  reset-dbs  reset-integration-test-dbs  rooset-ci-environment.Dockerfile  set-dev-env  set-env  setup-test-scenario-0  start-test-elasticsearch  start-test-system
github/: auth.go  queries.go
gitlab/: blob.go  commit.go  doc.go  initiative.go  utils.go
gitlabclient/: branch.go  queries.go
gitservice/: README.md  auth.go  gitlab.go  server.go  service.go  utils.go
initiativeclient/: AreaEditor.tsx  NewInitiativePage.tsx  competingInitiativeEntry.tsx  desc.tsx  doc.tsx  hooks.ts  newInitiativeEntry.tsx  newInitiativePage.tsx  rpc.ts
lfclient/: client.go  enum_gen.go
lfcore/: LICENSE  automatic_state_changes.sql  core.sql  demo.sql  lf_update_suggestion_order  test.sql
lfframework/: .gitignore  LICENSE  Makefile  Makefile.options
lffrontend/: INSTALL.html  INSTALL.mkd  LICENSE
lfmoonbridge/: LICENSE  Makefile  README  example_application.lua  example_webpage.css  example_webpage.html  helloworld.lua  moonbridge.c  moonbridge_http.lua  moonbridge_io.c  moonbridge_io.h  reference.txt
log-server/: Dockerfile  index.js  package-lock.json  package.json
messages/: app.pb.go  app.proto  commands.pb.go  commands.proto  containers.pb.go  containers.proto  custom_fields.pb.go  custom_fields.proto  docsvc.go  docsvc.ts  events.pb.go  events.proto  generate.go  git.go  git.pb.go  git.proto  github.pb.go  github.proto  index.d.ts  index.js  index.ts  initiative.go  issue_aggregate.pb.go  issue_aggregate.proto  options.pb.go  options.proto  projections.pb.go  services.pb.go  services.proto  unit_aggregate.pb.go  unit_aggregate.proto  unit_projections.pb.go  unit_projections.proto  utils.go  utils_test.go
pages/: .gitignore  package-lock.json  package.json  (+2 more)
rooset-application-toolkit/languages/cpp/: CMakeLists.txt
rooset-application-toolkit/languages/cpp/include/: CMakeLists.txt
rooset-application-toolkit/languages/cpp/include/ratk/: AggregateRepository.h  AggregateRepositoryImpl.h  EventRepository.h  EventRepositoryGetEventStoreHttpImpl.cpp  EventRepositoryGetEventStoreHttpImpl.h  EventRepositoryMockImpl.h  HttpTools.h  HttpToolsCurlImpl.cpp  HttpToolsCurlImpl.h  HttpToolsMockImpl.h  IdTools.h  IdUtils.h  JsonUtils.cpp  JsonUtils.h  ProjectCommand.h  ProjectEvent.h  uuid.h
rooset-application-toolkit/languages/cpp/tools/: generate-cpp-commands  generate-cpp-enums  generate-cpp-events  generate-cpp-exceptions  generate-cpp-tests  package.json
rooset-application-toolkit/languages/cpp/tools/src/: generateCommandClasses.js  generateEnumClasses.js  generateEventClasses.js  generateExceptionClasses.js  generateTests.js  index.js  utils.js
rooset-application-toolkit/languages/cpp/tools/src/generators/: generateCMakeList.js  generateCommandClass.js  generateCommandUtils.js  generateEnumParser.js  generateEnumUtilsHeader.js  generateEventClass.js  generateEventUtils.js  generateExceptionClass.js  generateMessageStatements.js  generateTestFile.js
rooset-application-toolkit/languages/cpp/tools/src/templates/: jsonConstructorAssignmentTemplates.js  serializeTemplates.js  typenameMap.js
rooset-domain-command-posix/: CMakeLists.txt  configure  main.cpp  rooset-domain-command-posix.kdev4  run-all-tests
rooset-domain-command-posix/.kdev4/: rooset-domain-command-posix.kdev4
rooset-domain-command-posix/include/: CMakeLists.txt
rooset-domain-command-posix/include/aggregates/: .UnitAggregate.h.kate-swp  .UnitCommandHandler.cpp.kate-swp  CMakeLists.txt  CommandHandler.h  CommandHandlerUtils.h  DelegationCalculatorImpl.cpp  IssueAggregate.h  IssueCommandHandler.cpp  IssueCommandHandler.h  MemberAggregate.h  MemberCommandHandler.h  PrivilegeUtils.cpp  PrivilegeUtils.h  SchulzeBallot.cpp  SchulzeBallot.h  SupportCalculator.h  UnitAggregate.cpp  UnitAggregate.h  UnitCommandHandler.cpp  UnitCommandHandler.h  VoteCalculator.h  VoteCalculatorSchulzeImpl.cpp  VoteCalculatorSchulzeImpl.h
rooset-domain-command-posix/tests/unit/: AggregateRepositoryImplTests.cpp  CMakeLists.txt  CommandServiceTests.cpp  DelegationCalculatorImplTests.cpp  DependancyTests.cpp  EventRepositoryGetEventStoreHttpImplTests.cpp  IdToolsImplTests.cpp  JsonUtilsTests.cpp  MessageUtilsTests.cpp  VoteCalculatorSchulzeImplTests.cpp
rooset-http-api-prototype/: CMakeLists.txt  main.cpp
rooset-http-api-prototype/include/: CMakeLists.txt  EchoHandler.cpp  EchoHandler.h  EchoHandlerFactory.h
rooset-http-api-prototype/include/http-server/: HttpRoute.h  HttpRouteHandlerResponse.h  HttpRouter.cpp  HttpRouter.h  Server.h
rooset-http-api-prototype/tests/integration/: CMakeLists.txt  RoutingTests.cpp
rooset-http-api-prototype/tests/unit/: CMakeLists.txt  DependencyTests.cpp
(+850 files in other folders)
